feat: 支持 goosefs fs ls xxx
