# docs/swagger.yaml
@@ -12,8 +12,12 @@ definitions:
         description: '必填 0: GooseFSDistributeLoad 1: GooseFSLoadMetadata'
         type: integer
       path:
-        description: 当 action 为 GooseFSDistributeLoad/GooseFSLoadMetadata 时必填
+        description: 当 action 为 GooseFSDistributeLoad/GooseFSLoadMetadata/GooseFSList
+          时必填
         type: string
+      timeout:
+        description: 当 action 为 GooseFSList 由于没有挂起任务，所以需要指定超时时间 默认 30 秒
+        type: integer
     required:
     - action
     type: object
